--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|Roboto&subset=latin-ext');
 p { margin: 0px; padding: 0px; } /* Hide additional <p> */
-body { margin: 0px; font-size: 12pt; font-family: "Roboto", sans-serif; }
+body { margin: 0px; font-size: 12pt; font-family: "Roboto", sans-serif; color: #162f57 }
 h1 { margin: 1em 0px; font-family: "Oswald", serif; }
 
 header {
@@ -17,7 +17,7 @@ header > * {
     max-width: 30em;
 }
 
-header a { color: black; text-decoration: none }
+header a { color: #162f57; text-decoration: none }
 header a:hover { text-decoration: underline }
 
 
@@ -30,7 +30,7 @@ nav {
 }
 nav ul { margin: 0px auto }
 nav ul li { display: inline-block; margin: 1em 2em; text-transform: uppercase }
-nav, nav a { color: black; text-decoration: none }
+nav, nav a { color: #162f57; text-decoration: none }
 nav a:hover { text-decoration: underline }
 
 main {
